# financeskills

./: .claude-plugin  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_ENHANCED.md  ENHANCEMENT_SUMMARY.md  INSTALLATION.md  LICENSE  MANIFEST.sha256  README.md  README_ENHANCED.md  RELEASING.md  SECURITY.md  SKILL_MATRIX.md  VERSIONS.md  llms.txt  marketplace.json  pyproject.toml  validate-skills-official.sh  validate-skills.sh  validate_skills.py
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml
ai-usage/: prompt-engineering.md
commands/: ai-anomaly-detection.md  allocate-revenue.md  analyze-financials.md  aro-computation.md  audit-checklist.md  automated-reconciliation.md  banking-compliance.md  budget-forecast.md  check-fraud.md  close-management.md  close-the-books.md  company-valuation.md  corporate-consolidation.md  credit-analysis.md  crypto-accounting.md  cvp-breakeven.md  debt-restructuring.md  deferred-tax.md  earned-value-mgmt.md  ecl-computation.md  esg-reporting.md  financial-analysis.md  fixed-asset-accounting.md  forensic-accounting.md  insurance-reserving.md  intercompany-accounting.md  inventory-costing.md  investment-analysis.md  journal-entry.md  lbo-modeling.md  lease-accounting.md  lease-measure.md  nlp-earnings-sentiment.md  oil-gas-valuation.md  post-je.md  predictive-burn-rate.md  product-profitability.md  reconcile.md  revenue-recognition.md  risk-assessment.md  (+12 more)
compliance/: REGULATORY_MAPPING.md
financeskills_pkg/: __init__.py  cli.py
standards/: README.md
tools/: REGISTRY.md  (+1 more)
(+587 files in other folders)
